--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ appdirs==1.4.4
 asttokens==2.0.4
 async-timeout==3.0.1
 attrs==21.2.0
+backports.entry-points-selectable==1.1.0
 base58==2.1.0
 bcrypt==3.1.7
 beautifulsoup4==4.8.2
 bitarray==1.2.2
 black==21.7b0
-blinker==1.4
 Brlapi==0.7.0
 cachetools==4.2.2
 certifi==2021.5.30
@@ -24,6 +24,7 @@ cytoolz==0.11.0
 dataclassy==0.10.4
 dbus-python==1.2.16
 defer==1.0.6
+distlib==0.3.2
 distro==1.4.0
 distro-info===0.23ubuntu1
 dnspython==2.1.0
@@ -42,6 +43,7 @@ eth-typing==2.2.2
 eth-utils==1.10.0
 execnet==1.9.0
 fasteners==0.14.1
+filelock==3.0.12
 Flask==2.0.1
 future==0.18.2
 google-api-core==2.0.0
@@ -95,8 +97,11 @@ pandas==1.2.3
 paramiko==2.6.0
 parsimonious==0.8.1
 pathspec==0.9.0
+pbr==5.6.0
 pexpect==4.6.0
 Pillow==7.0.0
+pipdeptree==0.13.2
+platformdirs==2.3.0
 pluggy==0.13.1
 prompt-toolkit==3.0.20
 protobuf==3.17.3
@@ -151,6 +156,7 @@ sortedcontainers==2.4.0
 soupsieve==1.9.5
 storage==0.0.4.3
 systemd-python==234
+testresources==2.0.1
 toml==0.10.2
 tomli==1.2.1
 toolz==0.11.1
@@ -165,6 +171,7 @@ unattended-upgrades==0.1
 urllib3==1.26.6
 usb-creator==0.3.7
 varint==1.0.2
+virtualenv==20.7.2
 vvm==0.1.0
 vyper==0.2.15
 wadllib==1.3.3
