--- a/requirements.txt
+++ b/requirements.txt
@@ -1,184 +1,4 @@
-aiohttp==3.7.4.post0
-appdirs==1.4.4
-asttokens==2.0.4
-async-timeout==3.0.1
-attrs==21.2.0
-backports.entry-points-selectable==1.1.0
-base58==2.1.0
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-bitarray==1.2.2
-black==21.7b0
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-charset-normalizer==2.0.4
-click==8.0.1
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-cytoolz==0.11.0
-dataclassy==0.10.4
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.2
-distro==1.4.0
-distro-info===0.23ubuntu1
-dnspython==2.1.0
-duplicity==0.8.12.0
-eip712==0.1.0
-entrypoints==0.3
-eth-abi==2.1.1
-eth-account==0.5.5
-eth-brownie==1.16.2
-eth-event==1.2.3
-eth-hash==0.3.1
-eth-keyfile==0.5.1
-eth-keys==0.3.3
-eth-rlp==0.2.1
-eth-typing==2.2.2
-eth-utils==1.10.0
-execnet==1.9.0
-fasteners==0.14.1
-filelock==3.0.12
-Flask==2.0.1
-future==0.18.2
-google-api-core==2.0.0
-google-auth==2.0.1
-google-cloud==0.34.0
-google-cloud-core==2.0.0
-google-cloud-storage==1.42.0
-google-crc32c==1.1.2
-google-resumable-media==2.0.0
-googleapis-common-protos==1.53.0
-gpg===1.13.1-unknown
-hexbytes==0.2.1
-html5lib==1.0.1
-httplib2==0.14.0
-hypothesis==6.15.0
-idna==3.2
-ImageHash==4.2.1
-inflection==0.5.0
-iniconfig==1.1.1
-ipfs-api==0.2.3
-ipfshttpclient==0.8.0a2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.6.0
-lockfile==0.12.2
-louis==3.12.0
-lru-dict==1.1.7
-lxml==4.5.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==2.0.1
-monotonic==1.5
-multiaddr==0.0.9
-multidict==5.1.0
-mypy-extensions==0.4.3
-mythx-models==1.9.1
-netaddr==0.8.0
-netifaces==0.10.4
-numpy==1.20.1
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.5.3.56
-packaging==21.0
-pandas==1.2.3
-paramiko==2.6.0
-parsimonious==0.8.1
-pathspec==0.9.0
-pbr==5.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-pipdeptree==0.13.2
-platformdirs==2.3.0
-pluggy==0.13.1
-prompt-toolkit==3.0.20
-protobuf==3.17.3
-psutil==5.8.0
-py==1.10.0
-py-solc-ast==1.2.9
-py-solc-x==1.1.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycparser==2.20
-pycryptodome==3.10.1
-pycups==1.9.73
-Pygments==2.10.0
-pygments-lexer-solidity==0.7.0
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
+flask==2.0.1
+pillow==7.0.0
 pymongo==3.12.0
-PyNaCl==1.3.0
-pyparsing==2.4.7
-PyQt5==5.14.1
-pyRFC3339==1.1
-pyrsistent==0.18.0
-PySocks==1.6.8
-pytest==6.2.4
-pytest-forked==1.3.0
-pytest-xdist==1.34.0
-python-apt==2.0.0+ubuntu0.20.4.5
-python-dateutil==2.8.1
-python-debian===0.1.36ubuntu1
-python-dotenv==0.16.0
-pythx==1.6.1
-pytz==2019.3
-PyWavelets==1.1.1
-pyxdg==0.26
-PyYAML==5.4.1
-regex==2021.8.21
-reportlab==3.5.34
-requests==2.26.0
-requests-unixsocket==0.2.0
-rlp==1.2.0
-rsa==4.7.2
-scipy==1.7.1
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-semantic-version==2.8.5
-simplejson==3.16.0
-sip==4.19.21
-six==1.16.0
-sortedcontainers==2.4.0
-soupsieve==1.9.5
-storage==0.0.4.3
-systemd-python==234
-testresources==2.0.1
-toml==0.10.2
-tomli==1.2.1
-toolz==0.11.1
-torbrowser-launcher==0.3.2
-tqdm==4.62.2
-typing-extensions==3.10.0.0
-ubuntu-advantage-tools==27.2
-ubuntu-cleaner==1.1.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.26.6
-usb-creator==0.3.7
-varint==1.0.2
-virtualenv==20.7.2
-vvm==0.1.0
-vyper==0.2.15
-wadllib==1.3.3
-wcwidth==0.2.5
-web3==5.23.0
-webencodings==0.5.1
-websockets==9.1
-Werkzeug==2.0.1
-wrapt==1.12.1
-xkit==0.0.0
-yarl==1.6.3
+ipfshttpclient==0.8.0a2
